--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,11 @@
         android:theme="@style/Theme.ListOfProducts"
         tools:targetApi="31">
         <activity
+            android:name=".presentation.ShopItemActivityChanges"
+            android:exported="false"
+            android:windowSoftInputMode="adjustResize"
+            />
+        <activity
             android:name=".presentation.MainActivity"
             android:exported="true">
             <intent-filter>
